another div addedindex.html

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
  <div id="meter">
  <h2>Another div added.</h2>
  </div>
+ <div id="message">The third div in the document</div>
 </body>
 </html>
